--- a/src/main/resources/templates/update-person-page.html
+++ b/src/main/resources/templates/update-person-page.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="container col-10">
     <h1><b>Person card</b></h1>
     <hr>
     <h2>Update personal data</h2>
@@ -20,17 +20,20 @@
           method="POST">
         <input type="hidden" th:field="*{id}"/>
         <label for="firstname">Firstname: </label>
-        <input id="firstname" type="text" th:field="*{firstname}" class="form-control mb-4 col-4" style="width:250px;">
         <div style="color:red" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}">Firstname error</div>
+        <input id="firstname" type="text" th:field="*{firstname}" class="form-control mb-4 col-4" style="width:250px;">
+
         <label for="surname">Surname: </label>
-        <input id="surname" type="text" th:field="*{surname}" class="form-control mb-4 col-4" style="width:250px;">
         <div style="color:red" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}">Surname error</div>
+        <input id="surname" type="text" th:field="*{surname}" class="form-control mb-4 col-4" style="width:250px;">
+
         <label for="login">Login: </label>
         <input id="login" type="text" th:value="*{login}" class="form-control mb-4 col-4" style="width:250px;"
                readonly="readonly">
         <label for="password">Password: </label>
-        <input id="password" type="text" th:field="*{password}" class="form-control mb-4 col-4" style="width:250px;">
         <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
+        <input id="password" type="text" th:field="*{password}" class="form-control mb-4 col-4" style="width:250px;">
+
         <label for="role">Role: </label>
         <select class="form-control" id="role" name="role" style="width:250px;">
             <option th:each="role : ${roleoptions}" th:text="${role}" th:value="${role}"
