--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="container col-10">
     <h1>
         <strong th:text="'Welcome to Little CRM,' + ' ' + ${curperson.firstname} + ' ' + ${curperson.surname}"></strong>
     </h1>
@@ -35,7 +35,7 @@
     <div id="received_messages_tasks" class="tabcontent">
         <h3>Received</h3>
         <hr>
-        <div style="float:left;">
+        <div style="float:left; width:40%;">
             <h4>Messages</h4>
             <table class="table table-striped table-responsive-md">
                 <thead>
@@ -58,7 +58,7 @@
                 </tbody>
             </table>
         </div>
-        <div style="float:right;">
+        <div style="float:right; width:50%;">
             <h4>Tasks</h4>
             <table class="table table-striped table-responsive-md">
                 <thead>
@@ -98,7 +98,7 @@
     <div id="sent_messages_tasks" class="tabcontent" style="display:none;">
         <h3>Sent</h3>
         <hr>
-        <div style="float:left;">
+        <div style="float:left;  width:40%;">
             <h4>Messages</h4>
             <table class="table table-striped table-responsive-md">
                 <thead>
@@ -121,7 +121,7 @@
                 </tbody>
             </table>
         </div>
-        <div style="float:right;">
+        <div style="float:right;  width:50%;">
             <h4>Tasks</h4>
             <table class="table table-striped table-responsive-md">
                 <thead>
