--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container" th:align="center">
+<div class="container col-10" th:align="center">
     <h1><b>Little CRM</b></h1>
     <hr>
     <form id="login" class="form-signin" method="post" action="/auth/login">
