--- a/src/main/resources/templates/task-page.html
+++ b/src/main/resources/templates/task-page.html
@@ -12,55 +12,103 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <h1><b>Task</b></h1>
+<div class="container col-10">
+    <h1 th:if="${task.author} != ${curperson.login}">
+        <strong th:text="'Task from' + ' ' + ${task.getPersonAuthor().firstname} + ' ' + ${task.getPersonAuthor().surname}"></strong>
+    </h1>
+    <h1 th:if="${task.author} == ${curperson.login}">
+        <strong th:text="'Task from you'"></strong>
+    </h1>
     <hr>
-    <h2>Task content</h2>
-    <p th:text="${task.getContent()}">VALUE</p>
-
-    <h2>Task status</h2>
-    <p th:text="${task.getCompletion()}">VALUE</p>
-    <p>
-
     <form id="send_form" action="#" th:action="@{/task/done}" th:object="${task}"
           th:method="POST">
         <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{author}"/>
         <input type="hidden" th:field="*{receiver}"/>
-        <input type="hidden" th:field="*{date}"/>
-        <input type="hidden" th:field="*{duedate}"/>
-        <input type="hidden" th:field="*{content}"/>
-        <input type="hidden" th:field="*{topic}"/>
         <input type="hidden" th:field="*{urgent}"/>
-        <h2>Task solution</h2>
-        <label>
-            <input th:readonly="${task.receiver} != ${curperson.login} or ${task.completion.name()}=='DONE'" type="text"
-                   style="width:800px;"
-                   th:field="*{solution}"
-                   placeholder="Solution"
-                   class="form-control mb-4 col-4">
-        </label>
+        <body>
+        <h1>
+            <label>Topic</label>
+            <input type="text" style="font-size:15px;" readonly="readonly"
+                   th:field="${task.topic}" class="form-control mb-4 col-2">
+
+            <label th:if="${task.author} != ${curperson.login}">Sender</label>
+            <input th:if="${task.author} != ${curperson.login}" type="text" style="font-size:15px;" readonly="readonly"
+                   th:field="${task.author}" class="form-control mb-4 col-2">
+
+            <label>Task status</label>
+            <input type="text" style="font-size:15px;" readonly="readonly"
+                   th:field="${task.completion}" class="form-control mb-4 col-2">
+            <table style="width:100%;">
+                <tr>
+                    <td>
+                        <div style="float:left; width:100%;">
+                            <label>Date</label>
+                            <input type="date" style="font-size:15px;" readonly="readonly"
+                                   th:field="${task.date}" class="form-control mb-4 col-2">
+                        </div>
+                    </td>
+                    <td>
+                        <div style="float:right; width:100%;">
+                            <label>Due date</label>
+                            <input type="date" style="font-size:15px;" readonly="readonly"
+                                   th:field="${task.duedate}" class="form-control mb-4 col-2">
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div style="float:left; width:100%;">
+                            <label>Task content</label>
+                            <br>
+                            <textarea data-cke-saved-name=" " rows="5" cols="100" style="font-size:15px;"
+                                      readonly="readonly" th:field="${task.content}"
+                                      class="form-control mb-4 col-6"></textarea>
+                        </div>
+                    </td>
+                    <td>
+                        <div style="float:right; width:100%;">
+                            <label>Task solution</label>
+                            <br>
+                            <textarea data-cke-saved-name="Task Solution" rows="5" cols="100" style="font-size:15px;"
+                                      th:readonly="${task.receiver} != ${curperson.login} or ${task.completion.name()}=='DONE'or ${task.completion.name()}=='APPROVED'"
+                                      th:field="*{solution}" class="form-control mb-4 col-6"></textarea>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </h1>
+        </body>
     </form>
-    <button id="send_button" th:if="${task.receiver}==${curperson.login} and ${task.completion.name()}=='START'"
-            type="submit"
-            class="btn btn-info col-2">Send
-    </button>
-
-
     <p>
-    <form action="#" th:action="@{/task/approved/{id}(id=${task.id})}" th:object="${task}"
-          method="POST">
-        <button th:if="${task.author}==${curperson.login} and ${task.completion.name()}=='DONE'" type="submit"
-                class="btn btn-info col-2">Approve
-        </button>
-    </form>
+        <!--        <a th:href="@{/home}" class="btn btn-primary">Back</a>-->
+    <table style="width:100%;">
+        <tr>
+            <td>
+                <form action="#" th:action="@{/task/approved/{id}(id=${task.id})}" th:object="${task}"
+                      method="POST">
+                    <button th:if="${task.author}==${curperson.login} and ${task.completion.name()}=='DONE'"
+                            type="submit"
+                            class="btn btn-info col-2">Approve
+                    </button>
+                </form>
+                <button id="send_button"
+                        th:if="${task.receiver}==${curperson.login} and ${task.completion.name()}=='START'"
+                        type="submit"
+                        class="btn btn-info col-2">Send
+                </button>
+            </td>
+            <td style="text-align: right;">
+                <form id="back" action="#" th:action="@{/home}" method="GET">
+                    <button id="back_button" type="submit" class="btn btn-info col-2" data-icon="back">Back</button>
+                </form>
+            </td>
+        </tr>
+    </table>
 
-
-    <p>
-        <a th:href="@{/home}" class="btn btn-primary">Back</a>
 </div>
 <script>
     document.getElementById('send_button').addEventListener('click', () => document.getElementById('send_form').submit());
+    document.getElementById('back_button').addEventListener('click', () => document.getElementById('back').submit());
 </script>
 </body>
 </html>
